--- a/proyecto1/proyecto1.css
+++ b/proyecto1/proyecto1.css
@@ -1,5 +1,5 @@
 body{
-    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     margin-top: 5px;       
     padding: 5px;    
@@ -9,6 +9,7 @@ body{
     text-align: center;
 }
 form{
-    width: auto;
+    text-align: center;
+    width: min-content;
     border: 2px solid #000;
 }
