--- a/proyecto1/proyecto1.css
+++ b/proyecto1/proyecto1.css
@@ -1,15 +1,15 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
+    font-style: italic;
+    font-size: large;
     margin-top: 5px;       
     padding: 5px;    
-    background-color:rgb(114, 114, 113);   
-    border: 2px solid #000;    
+    background-color: lightskyblue;
     color: #000000;   
     text-align: center;
 }
-form{
+.form{
     text-align: center;
-    width: min-content;
+    width: 500px;
     border: 2px solid #000;
+    margin:auto;
 }
