--- a/proyecto1/proyecto1.css
+++ b/proyecto1/proyecto1.css
@@ -10,6 +10,8 @@ body{
 .form{
     text-align: center;
     width: 500px;
-    border: 2px solid #000;
+    border: 2px solid #fff;
     margin:auto;
+    border-radius: 15px;
+
 }
