--- a/dummy/style.css
+++ b/dummy/style.css
@@ -1,62 +1,44 @@
 body{
-  background-color: antiquewhite;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  color: blue;
+  background-color: gray;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-main{
-  background-color:aqua;
-  width: 80%;
-  margin: auto;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .2);
+ul{
+  color: green;
   display: flex;
+  gap: 15px;
+  padding: 15px;
 }
 
-header{
-  background-color: #2ecc71;
-  text-align: center;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .2);
-  flex-direction: column;
-}
-section{
-  display: flex;
-}
-.box1{
-  background-color:crimson;
-  display: flex;
-  align-content: flex-start;
-  width: 80%;
-  margin: auto;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .2);
-  flex-direction: column;
+p {
+  color: red;
 }
 
-.box2{
-  background-color:darkgreen;
-  display: flex;
-  align-content: flex-start;
-  width: 80%;
-  margin: auto;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .2);
-  flex-direction: column;
+span{
+  color: yellow;
 }
 
-.box3{
-  background-color:blue;
-  display: flex;
-  align-content: flex-start;
-  width: 80%;
-  margin: auto;
+.color{
+  color: tomato;
+}
+
+.box{
+  color: orange;
+}
+
+li{
+  background-color: black;
+  color: white;
+  list-style: none;
   padding: 10px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .2);
-  flex-direction: column;
+}
+
+.cards{
+  width: 500px;
+}
+
+.cardsContainer{
+  display: flex;
+  align-content: center;
 }
