--- a/dummy/style.css
+++ b/dummy/style.css
@@ -1,44 +1,64 @@
 body{
-  color: blue;
+  margin: 0;
+  padding: 0;
+  height: 94vh;
+  background-color: aquamarine;
+  font-family: 'Roboto', sans-serif;
+  font-size: larger;
+}
+
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  background-color: blue;
+}
+
+main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+}
+
+main div{
+  padding: 40px;
+  display: flex;
+  gap: 25px;
+  width: 70%;
   background-color: gray;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-x: scroll;
 }
 
-ul{
-  color: green;
-  display: flex;
-  gap: 15px;
-  padding: 15px;
+main div::-webkit-scrollbar{
+  height: 7px;
 }
 
-p {
-  color: red;
-}
-
-span{
-  color: yellow;
-}
-
-.color{
-  color: tomato;
-}
-
-.box{
-  color: orange;
-}
-
-li{
+main div::-webkit-scrollbar-thumb{
   background-color: black;
-  color: white;
-  list-style: none;
-  padding: 10px;
+  border-radius: 5px;
 }
 
-.cards{
-  width: 500px;
+main div picture{
+  padding: 15px;
+  background-color: gray;
+  border-radius: 15px;
 }
 
-.cardsContainer{
-  display: flex;
-  align-content: center;
+main div picture img{
+  border-radius: 10px 10px 0 0;
+  width: 200px;
+  height: 200px;
+  border: 1px solid #000;
 }
+
+main div picture:hover, main div picture:focus{
+  transform: scale(1.1);
+  transition: ease 0.5s;
+}
+
+figcaption{
+  text-align: center;
+}
+
